refactor: move structs around for better understanding
