# docs/swagger.json
@@ -43,7 +43,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.ChapterMapsResponse"
+                                            "$ref": "#/definitions/controllers.ChapterMapsResponse"
                                         }
                                     }
                                 }
@@ -166,7 +166,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.ChaptersResponse"
+                                            "$ref": "#/definitions/controllers.ChaptersResponse"
                                         }
                                     }
                                 }
@@ -206,7 +206,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.LoginResponse"
+                                            "$ref": "#/definitions/controllers.LoginResponse"
                                         }
                                     }
                                 }
@@ -252,7 +252,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.EditMapImageRequest"
+                            "$ref": "#/definitions/controllers.EditMapImageRequest"
                         }
                     }
                 ],
@@ -268,7 +268,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.EditMapImageRequest"
+                                            "$ref": "#/definitions/controllers.EditMapImageRequest"
                                         }
                                     }
                                 }
@@ -407,7 +407,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.RecordResponse"
+                                            "$ref": "#/definitions/controllers.RecordResponse"
                                         }
                                     }
                                 }
@@ -459,7 +459,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.MapSummaryResponse"
+                                            "$ref": "#/definitions/controllers.MapSummaryResponse"
                                         }
                                     }
                                 }
@@ -503,7 +503,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.EditMapSummaryRequest"
+                            "$ref": "#/definitions/controllers.EditMapSummaryRequest"
                         }
                     }
                 ],
@@ -519,7 +519,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.EditMapSummaryRequest"
+                                            "$ref": "#/definitions/controllers.EditMapSummaryRequest"
                                         }
                                     }
                                 }
@@ -563,7 +563,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateMapSummaryRequest"
+                            "$ref": "#/definitions/controllers.CreateMapSummaryRequest"
                         }
                     }
                 ],
@@ -579,7 +579,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.CreateMapSummaryRequest"
+                                            "$ref": "#/definitions/controllers.CreateMapSummaryRequest"
                                         }
                                     }
                                 }
@@ -623,7 +623,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.DeleteMapSummaryRequest"
+                            "$ref": "#/definitions/controllers.DeleteMapSummaryRequest"
                         }
                     }
                 ],
@@ -639,7 +639,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.DeleteMapSummaryRequest"
+                                            "$ref": "#/definitions/controllers.DeleteMapSummaryRequest"
                                         }
                                     }
                                 }
@@ -688,7 +688,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.ProfileResponse"
+                                            "$ref": "#/definitions/controllers.ProfileResponse"
                                         }
                                     }
                                 }
@@ -789,7 +789,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.ProfileResponse"
+                                            "$ref": "#/definitions/controllers.ProfileResponse"
                                         }
                                     }
                                 }
@@ -832,7 +832,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.RankingsResponse"
+                                            "$ref": "#/definitions/controllers.RankingsResponse"
                                         }
                                     }
                                 }
@@ -877,7 +877,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.SearchResponse"
+                                            "$ref": "#/definitions/controllers.SearchResponse"
                                         }
                                     }
                                 }
@@ -914,7 +914,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.LoginResponse"
+                                            "$ref": "#/definitions/controllers.LoginResponse"
                                         }
                                     }
                                 }
@@ -949,7 +949,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.LoginResponse"
+                                            "$ref": "#/definitions/controllers.LoginResponse"
                                         }
                                     }
                                 }
@@ -998,7 +998,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.ProfileResponse"
+                                            "$ref": "#/definitions/controllers.ProfileResponse"
                                         }
                                     }
                                 }
@@ -1022,29 +1022,7 @@
         }
     },
     "definitions": {
-        "models.Category": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Chapter": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ChapterMapsResponse": {
+        "controllers.ChapterMapsResponse": {
             "type": "object",
             "properties": {
                 "chapter": {
@@ -1058,7 +1036,7 @@
                 }
             }
         },
-        "models.ChaptersResponse": {
+        "controllers.ChaptersResponse": {
             "type": "object",
             "properties": {
                 "chapters": {
@@ -1072,7 +1050,7 @@
                 }
             }
         },
-        "models.CreateMapSummaryRequest": {
+        "controllers.CreateMapSummaryRequest": {
             "type": "object",
             "required": [
                 "category_id",
@@ -1102,7 +1080,7 @@
                 }
             }
         },
-        "models.DeleteMapSummaryRequest": {
+        "controllers.DeleteMapSummaryRequest": {
             "type": "object",
             "required": [
                 "route_id"
@@ -1113,7 +1091,7 @@
                 }
             }
         },
-        "models.EditMapImageRequest": {
+        "controllers.EditMapImageRequest": {
             "type": "object",
             "required": [
                 "image"
@@ -1124,7 +1102,7 @@
                 }
             }
         },
-        "models.EditMapSummaryRequest": {
+        "controllers.EditMapSummaryRequest": {
             "type": "object",
             "required": [
                 "description",
@@ -1154,6 +1132,133 @@
                 }
             }
         },
+        "controllers.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.MapSummaryResponse": {
+            "type": "object",
+            "properties": {
+                "map": {
+                    "$ref": "#/definitions/models.Map"
+                },
+                "summary": {
+                    "$ref": "#/definitions/models.MapSummary"
+                }
+            }
+        },
+        "controllers.ProfileResponse": {
+            "type": "object",
+            "properties": {
+                "avatar_link": {
+                    "type": "string"
+                },
+                "country_code": {
+                    "type": "string"
+                },
+                "profile": {
+                    "type": "boolean"
+                },
+                "scores_mp": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.ScoreResponse"
+                    }
+                },
+                "scores_sp": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.ScoreResponse"
+                    }
+                },
+                "steam_id": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.RankingsResponse": {
+            "type": "object",
+            "properties": {
+                "rankings_mp": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserRanking"
+                    }
+                },
+                "rankings_sp": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserRanking"
+                    }
+                }
+            }
+        },
+        "controllers.RecordResponse": {
+            "type": "object",
+            "properties": {
+                "score_count": {
+                    "type": "integer"
+                },
+                "score_time": {
+                    "type": "integer"
+                }
+            }
+        },
+        "controllers.ScoreResponse": {
+            "type": "object",
+            "properties": {
+                "map_id": {
+                    "type": "integer"
+                },
+                "records": {}
+            }
+        },
+        "controllers.SearchResponse": {
+            "type": "object",
+            "properties": {
+                "maps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.MapShort"
+                    }
+                },
+                "players": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserShort"
+                    }
+                }
+            }
+        },
+        "models.Category": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Chapter": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Game": {
             "type": "object",
             "properties": {
@@ -1164,14 +1269,6 @@
                     "type": "boolean"
                 },
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
                     "type": "string"
                 }
             }
@@ -1264,77 +1361,6 @@
                 }
             }
         },
-        "models.MapSummaryResponse": {
-            "type": "object",
-            "properties": {
-                "map": {
-                    "$ref": "#/definitions/models.Map"
-                },
-                "summary": {
-                    "$ref": "#/definitions/models.MapSummary"
-                }
-            }
-        },
-        "models.ProfileResponse": {
-            "type": "object",
-            "properties": {
-                "avatar_link": {
-                    "type": "string"
-                },
-                "country_code": {
-                    "type": "string"
-                },
-                "profile": {
-                    "type": "boolean"
-                },
-                "scores_mp": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ScoreResponse"
-                    }
-                },
-                "scores_sp": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ScoreResponse"
-                    }
-                },
-                "steam_id": {
-                    "type": "string"
-                },
-                "user_name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.RankingsResponse": {
-            "type": "object",
-            "properties": {
-                "rankings_mp": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.UserRanking"
-                    }
-                },
-                "rankings_sp": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.UserRanking"
-                    }
-                }
-            }
-        },
-        "models.RecordResponse": {
-            "type": "object",
-            "properties": {
-                "score_count": {
-                    "type": "integer"
-                },
-                "score_time": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.Response": {
             "type": "object",
             "properties": {
@@ -1344,32 +1370,6 @@
                 },
                 "success": {
                     "type": "boolean"
-                }
-            }
-        },
-        "models.ScoreResponse": {
-            "type": "object",
-            "properties": {
-                "map_id": {
-                    "type": "integer"
-                },
-                "records": {}
-            }
-        },
-        "models.SearchResponse": {
-            "type": "object",
-            "properties": {
-                "maps": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.MapShort"
-                    }
-                },
-                "players": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.UserShort"
-                    }
                 }
             }
         },
